<resources>
    <string name="app_name">AndWallet</string>


    <string name="action_settings">Settings</string>
    <string name="pin">Please enter the 4 number pin</string>
    <string name="expense_and_income">Expense and Income</string>
    <string name="pin_error_message">Incorrect Pin, please try again</string>
    <string name="type_hint">Type of Expense/Income</string>
    <string name="amount_hint">Amount</string>
    <string name="income_tb">INCOME</string>
    <string name="expense_tb">EXPENSE</string>
    <string name="save_btn">SAVE</string>
    <string name="balance_is">Balance is</string>
    <string name="delete_all">Delete All</string>
    <string name="summary_btn">Summary</string>
    <string name="current_balance">Current balance is &#160; </string>
    <string name="amount_error">This field can not be empty</string>
    <string name="type_error">This field can not be empty</string>
    <string name="andwallet">AndWallet</string>
    <string name="this_view_shows_your_current_balance">This view shows your current balance:</string>
    <string name="income">Income:&#160;</string>
    <string name="expense">Expense:&#160;</string>
    <string name="bracket">bracket</string>
    <string name="balance">Balance:&#160;</string>
    <string name="delete">Delete</string>
</resources>
