<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecordingActivity">

    <EditText
        android:id="@+id/etType"
        android:layout_width="167dp"
        android:layout_height="61dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="36dp"
        android:hint="@string/type_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="139dp"
        android:layout_height="61dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:hint="@string/amount_hint"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/tbType"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.591"
        app:layout_constraintStart_toEndOf="@+id/etType"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ToggleButton
        android:id="@+id/tbType"
        android:layout_width="111dp"
        android:layout_height="56dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="108dp"
        android:layout_marginRight="108dp"
        android:textOn="@string/income_tb"
        android:textOff="@string/expense_tb"
        app:layout_constraintEnd_toStartOf="@+id/btnSave"
        app:layout_constraintTop_toBottomOf="@+id/etType" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="116dp"
        android:layout_height="56dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:text="@string/save_btn"
        app:layout_constraintBottom_toTopOf="@+id/recyclerTodo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAmount"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvBalance"
        android:layout_width="297dp"
        android:layout_height="24dp"
        android:text="@string/balance_is"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerTodo"
        app:layout_constraintVertical_bias="0.129" />

    <Button
        android:id="@+id/btnDeleteAll"
        android:layout_width="126dp"
        android:layout_height="42dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:text="@string/delete_all"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBalance"
        app:layout_constraintVertical_bias="0.156" />

    <Button
        android:id="@+id/btnSummary"
        android:layout_width="119dp"
        android:layout_height="42dp"
        android:text="@string/summary_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.547"
        app:layout_constraintStart_toEndOf="@+id/btnDeleteAll"
        app:layout_constraintTop_toBottomOf="@+id/tvBalance"
        app:layout_constraintVertical_bias="0.156" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerTodo"
        android:layout_width="410dp"
        android:layout_height="354dp"
        android:padding="20dp"
        android:scrollbars="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbType"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>