<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".SummaryActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:text="@string/andwallet"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:text="@string/this_view_shows_your_current_balance"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/tvIncome"
        android:textColor="#4CAF50"
        android:layout_width="129dp"
        android:layout_height="26dp"
        android:layout_marginTop="24dp"
        android:layout_weight="0.5"
        android:text="@string/income"
        app:layout_constraintBottom_toTopOf="@+id/ivBracket"
        app:layout_constraintEnd_toStartOf="@+id/tvExpense"
        app:layout_constraintHorizontal_bias="0.637"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.735" />

    <TextView
        android:id="@+id/tvExpense"
        android:textColor="#E91E63"
        android:layout_width="126dp"
        android:layout_height="25dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_weight="0.5"
        android:text="@string/expense"
        app:layout_constraintBottom_toTopOf="@+id/ivBracket"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.714" />

    <ImageView
        android:id="@+id/ivBracket"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.175"
        tools:layout_editor_absoluteX="0dp"
        android:contentDescription="@string/bracket"/>

    <TextView
        android:id="@+id/tvSummaryBalance"
        android:layout_width="162dp"
        android:layout_height="25dp"
        android:text="@string/balance"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivBracket"
        app:layout_constraintVertical_bias="0.091" />


</androidx.constraintlayout.widget.ConstraintLayout>